--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,4 @@ monitor_speed = 115200
 ; Async Web Server library
 ; https://github.com/me-no-dev/ESPAsyncWebServer
 lib_deps = ESP Async WebServer
-; lib_ldf_mode = chain+
+lib_ldf_mode = chain+
