specify upload port

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 
+; any port that starts with /dev/ttyUSB
+upload_port = /dev/cu.SLAB_USBtoUART
+
 ; Custom Serial Monitor speed (baud rate)
 monitor_speed = 115200
 
