add basic server

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,12 +14,22 @@ board = nodemcuv2
 framework = arduino
 
 ; any port that starts with /dev/ttyUSB
-upload_port = /dev/cu.SLAB_USBtoUART
+upload_port = /dev/cu.usbserial-0001
 
 ; Custom Serial Monitor speed (baud rate)
 monitor_speed = 115200
 
 ; Async Web Server library
 ; https://github.com/me-no-dev/ESPAsyncWebServer
-lib_deps = ESP Async WebServer
+lib_deps =
+    TMCStepper
+    ESP Async WebServer
+    ; AsyncTCP
+    ; SpeedyStepper
+    EspSoftwareSerial
+    ; SoftwareSerial
+    ; Streaming
+    ; AccelStepper
+    ; FlexyStepper
+    ; SpeedyStepper
 lib_ldf_mode = chain+
