--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
 
 ; any port that starts with /dev/ttyUSB
